--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
     "release": "release-it",
-    "release-ci": "release-it --ci"
+    "release-ci": "release-it --ci",
+    "start": "node server.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.8.2",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "fusioncharts": "^3.15.2",
     "quasar": "^1.12.3",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-fusioncharts": "^3.0.4",
     "vue-i18n": "^8.20.0",
