--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "fusioncharts": "^3.15.2",
+    "mobile-device-detect": "^0.4.3",
     "quasar": "^1.12.3",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
